@@ -4,19 +4,16 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.gol.golbackend.dto.GameStateDto;
 import com.gol.golbackend.entity.GameState;
 import com.gol.golbackend.entity.Row;
-import com.gol.golbackend.exception.NotFoundException;
 import com.gol.golbackend.service.GolService;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
@@ -27,37 +24,41 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@RunWith(SpringRunner.class)
 @WebMvcTest(GolController.class)
-public class GolControllerTest {
+class GolControllerTest {
 
 	@Autowired
-	private MockMvc mvc;
+	private MockMvc mockMvc;
 
 	@MockBean
 	private GolService golServiceImpl;
 
-	public static ObjectMapper objectMapper = new ObjectMapper();
+	static ObjectMapper objectMapper = new ObjectMapper();
 
 	private GameState gameState;
 
-	@Before
-	public void init() {
+	private GameStateDto gameStateDto;
+
+	@BeforeEach
+	void init() {
 		gameState = GameState.builder()
 				.id(2l)
 				.previousGameStateId(1l)
 				.nextGameStateId(3l)
 				.index(2)
-				.rows(Arrays.asList(new Row())).build();
+				.rows(List.of(new Row())).build();
+
+		gameStateDto = new GameStateDto();
+		gameStateDto.getRows().add(new Row());
 	}
 
 	@Test
-	public void testStartGame() throws Exception {
+	void testStartGame() throws Exception {
 		when(golServiceImpl.startGame(any(GameStateDto.class))).thenReturn(gameState);
 
-		mvc.perform(post("/api/start-game")
+		mockMvc.perform(post("/api/start-game")
 				.contentType(MediaType.APPLICATION_JSON)
-				.content(objectMapper.writeValueAsString(gameState)))
+				.content(objectMapper.writeValueAsString(gameStateDto)))
 				.andExpect(status().isOk())
 				.andExpect(jsonPath("$.id", is(2)))
 				.andExpect(jsonPath("$.previousGameStateId", is(1)))
@@ -66,49 +67,45 @@ public class GolControllerTest {
 	}
 
 	@Test
-	public void testStartGameBadRequest() throws Exception {
-		when(golServiceImpl.startGame(any(GameStateDto.class))).thenReturn(gameState);
+	void testProcessGameState() throws Exception {
+		when(golServiceImpl.getNextCalculatedGameState(anyLong())).thenReturn(gameState);
+
+		mockMvc.perform(get("/api/new-game-state/{gameStateId}", 1)
+				.contentType(MediaType.APPLICATION_JSON))
+				.andExpect(status().isOk())
+				.andExpect(jsonPath("$.id", is(2)))
+				.andExpect(jsonPath("$.previousGameStateId", is(1)))
+				.andExpect(jsonPath("$.nextGameStateId", is(3)))
+				.andExpect(jsonPath("$.index", is(2)));
+	}
+
+	@Test
+	void testGetGameState() throws Exception {
+		when(golServiceImpl.getGameState(anyLong())).thenReturn(gameState);
+
+		mockMvc.perform(get("/api/game-state/{gameStateId}", 1)
+				.contentType(MediaType.APPLICATION_JSON))
+				.andExpect(status().isOk())
+				.andExpect(jsonPath("$.id", is(2)))
+				.andExpect(jsonPath("$.previousGameStateId", is(1)))
+				.andExpect(jsonPath("$.nextGameStateId", is(3)))
+				.andExpect(jsonPath("$.index", is(2)));
+	}
+
+	@Test
+	void testStartGameBadRequest() throws Exception {
 		GameStateDto invalidGameStateDto = new GameStateDto();
 		invalidGameStateDto.setRows(null);
 
-		mvc.perform(post("/api/start-game")
+		mockMvc.perform(post("/api/start-game")
 				.contentType(MediaType.APPLICATION_JSON)
 				.content(objectMapper.writeValueAsString(invalidGameStateDto)))
 				.andExpect(status().isBadRequest());
 	}
 
 	@Test
-	public void testProcessGameState() throws Exception {
-		when(golServiceImpl.getNextCalculatedGameState(anyLong())).thenReturn(gameState);
-
-		mvc.perform(get("/api/new-game-state/{gameStateId}", 1)
-				.contentType(MediaType.APPLICATION_JSON))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$.id", is(2)))
-				.andExpect(jsonPath("$.previousGameStateId", is(1)))
-				.andExpect(jsonPath("$.nextGameStateId", is(3)))
-				.andExpect(jsonPath("$.index", is(2)));
-	}
-
-	@Test
-	public void testGetGameState() throws Exception {
-		when(golServiceImpl.getGameState(anyLong())).thenReturn(gameState);
-
-		mvc.perform(get("/api/game-state/{gameStateId}", 1L)
-				.contentType(MediaType.APPLICATION_JSON))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$.id", is(2)))
-				.andExpect(jsonPath("$.previousGameStateId", is(1)))
-				.andExpect(jsonPath("$.nextGameStateId", is(3)))
-				.andExpect(jsonPath("$.index", is(2)));
-
-	}
-
-	@Test
-	public void testGetGameStateNotFound() throws Exception {
-		when(golServiceImpl.getGameState(anyLong())).thenThrow(new NotFoundException());
-
-		mvc.perform(get("/api/get-game-state/{gameStateId}", 1L)
+	void testGetGameStateNotFound() throws Exception {
+		mockMvc.perform(get("/api/get-game-state/{gameStateId}", 1)
 				.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
