@@ -8,27 +8,25 @@ import com.gol.golbackend.entity.Row;
 import com.gol.golbackend.exception.NotFoundException;
 import com.gol.golbackend.repository.GameTableRepository;
 import com.gol.golbackend.service.impl.GolServiceImpl;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.AdditionalAnswers.returnsFirstArg;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
-@RunWith(MockitoJUnitRunner.class)
-public class GolServiceImplTest {
+@ExtendWith(MockitoExtension.class)
+class GolServiceImplTest {
 
 	final static Integer EXPECTED_GAME_STATE_INDEX = Constants.DEFAULT_TABLE_STATE_INDEX + 1;
 
@@ -41,55 +39,62 @@ public class GolServiceImplTest {
 	@Mock
 	private GameStateDtoConverter gameStateDtoConverter;
 
+	@Mock
+	private GameStateMapService gameStateMapService;
+
 	@Spy
 	@InjectMocks
 	private GolServiceImpl subject;
 
 	private GameState gameState;
 
-	@Before
-	public void init() {
+	@BeforeEach
+	void init() {
 		gameState = GameState.builder()
 				.id(2l)
 				.previousGameStateId(1l)
 				.nextGameStateId(3l)
 				.index(Constants.DEFAULT_TABLE_STATE_INDEX)
-				.rows(Arrays.asList(new Row())).build();
+				.rows(List.of(new Row())).build();
 
-		when(gameTableRepository.save(any(GameState.class))).then(returnsFirstArg());
+		lenient().when(gameTableRepository.save(any(GameState.class))).then(returnsFirstArg());
 	}
 
 	@Test
-	public void testStartGame() {
+	void testStartGame() {
 		gameState.setIndex(null);
 		when(gameStateDtoConverter.convert(any())).thenReturn(gameState);
+		when(gameStateMapService.mapRelationOwners(any())).thenReturn(gameState);
+
 		GameStateDto gameStateDto = new GameStateDto();
 		gameStateDto.setRows(gameState.getRows());
 		GameState resultGameState = subject.startGame(gameStateDto);
 
-		assertThat(resultGameState.getRows()).isNotNull();
+		assertNotNull(resultGameState.getRows());
 		assertEquals(EXPECTED_GAME_STATE_INDEX, resultGameState.getIndex());
 	}
 
 	@Test
-	public void testGetNextCalculatedGameState() {
+	void testGetNextCalculatedGameState() {
 		doReturn(gameState).when(subject).getGameState(anyLong());
+		when(gameStateMapService.mapRelationOwners(any())).thenReturn(gameState);
+
 		GameState resultGameState = subject.getNextCalculatedGameState(1l);
 
-		assertThat(resultGameState.getRows()).isNotNull();
+		assertNotNull(resultGameState.getRows());
 		assertEquals(EXPECTED_GAME_STATE_INDEX, resultGameState.getIndex());
 	}
 
 	@Test
-	public void testGetGameState() {
+	void testGetGameState() {
 		when(gameTableRepository.findById(anyLong())).thenReturn(Optional.ofNullable(gameState));
 		GameState resultGameState = subject.getGameState(anyLong());
 
-		assertThat(resultGameState.getRows()).isNotNull();
+		assertNotNull(resultGameState.getRows());
 	}
 
-	@Test(expected = NotFoundException.class)
-	public void testNotFoundGetGameState() {
-		subject.getGameState(anyLong());
+	@Test
+	void testNotFoundGetGameState() {
+		assertThrows(NotFoundException.class, () -> subject.getGameState(anyLong()));
 	}
 }
